# tablespoon

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tablespoon.ipynb
.github/workflows/: python-app.yml
docs/: EXAMPLES.md  FORECAST_METHODS.md  index.md
docs/docs/: index.md
docs/docs/section/: math.md
docs/section/: api.md  extended.md  parallel.md  plotting.md  skill.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/section/api/: index.html
docs/site/section/extended/: index.html
docs/site/section/math/: index.html
examples/: skill_score_example.ipynb  tablespoon.ipynb  time_series_cv.ipynb
section/api/: index.html
section/extended/: index.html
section/math/: index.html
section/parallel/: index.html
section/plotting/: index.html
section/skill/: index.html
site/: 404.html  index.html
site/section/api/: index.html
site/section/extended/: index.html
site/section/parallel/: index.html
site/section/plotting/: index.html
tablespoon/: __init__.py  data.py  forecasters.py  model_selection.py
tablespoon/stan/: mean.stan  naive.stan  snaive.stan  snaive_t_dist.stan
tests/: test_tablespoon.py
www/: mkdocs.yml
www/docs/: index.md
www/docs/javascripts/: mathjax.js
www/docs/section/: extended.md  plotting.md
