[tool.poetry]
authors = ["Alex Hallam <alexhallam6.28@gmail.com>"]
description = "Simple probabilistic time series benchmark models"
exclude = [
  "tablespoon/stan/out/*",
  "tablespoon/stan/*.hpp",
  "tablespoon/stan/mean",
  "tablespoon/stan/naive",
  "tablespoon/stan/snaive",
]
homepage = "https://github.com/alexhallam/tablespoon"
include = ["docs/EXAMPLES.md", "docs/FORECAST_METHODS.md"]
keywords = [
  "forecasting",
  "forecast",
  "probabilistic",
  "naive",
  "benchmark",
  "seasonal naive",
  "mean forecast",
  "simple",
  "time series",
]
license = "MIT"
name = "tablespoon"
readme = "README.md"
repository = "https://github.com/alexhallam/tablespoon"
version = "0.1.25"

[tool.poetry.dependencies]
cmdstanpy = "^0.9.77"
numpy = "^1.21.2"
pandas = "^1.3.2"
pytest = "^6.2.5"
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
cmdstanpy = "^0.9.77"
numpy = "^1.21.2"
pandas = "^1.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
