[tool.poetry]
authors = ["Alex Hallam <alexhallam6.28@gmail.com>"]
description = "Simple probabilistic time series benchmark models"
exclude = [
  "tablespoon/stan/out/*",
  "tablespoon/stan/*.hpp",
  "tablespoon/stan/mean",
  "tablespoon/stan/naive",
  "tablespoon/stan/snaive",
]
homepage = "https://alexhallam.github.io/tablespoon/"
include = ["docs/EXAMPLES.md", "docs/FORECAST_METHODS.md"]
keywords = [
  "forecasting",
  "forecast",
  "probabilistic",
  "naive",
  "benchmark",
  "seasonal naive",
  "mean forecast",
]
license = "MIT"
name = "tablespoon"
readme = "README.md"
repository = "https://github.com/alexhallam/tablespoon"
version = "0.5.1"

[tool.poetry.dependencies]
numpy = "^1.23.0"
pandas = "^1.3.2"
pytest = "7.0.0"
python = ">=3.10"
scipy = "^1.9.3"
statsmodels = "^0.14.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
